Se implementaron nuevos cambios

--- a/src/app/components/tarjeta-credito/tarjeta-credito.component.html
+++ b/src/app/components/tarjeta-credito/tarjeta-credito.component.html
@@ -8,45 +8,55 @@
             </div>
         </div>
     </div>
-
     <div class="row mt-4">
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-body">
                     <h5 class="titulo">AGREGAR TARJETA</h5>
-                    <form>
+
+                    <form [formGroup]="form" (ngSubmit)="agregarTarjeta()">
                         <div class="input-group input-group.lg mb-3">
                             <span class="input-group-text">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-user"
+                                [class.green-icon]="this.form.get('titular')?.valid"
+                                [class.red-icon]="this.form.get('titular')?.invalid && this.form.get('titular')?.touched"></i>
                             </span>
-                            <input type="text" class="form-control" placeholder="Titular">
+                            <input formControlName="titular" type="text" class="form-control" placeholder="Titular">
                         </div>
                         <div class="input-group input-group.lg mb-3">
                             <span class="input-group-text">
-                                <i class="fas fa-credit-card"></i>
+                                <i class="fas fa-credit-card"
+                                [class.green-icon]="this.form.get('numeroTarjeta')?.valid"
+                                [class.red-icon]="this.form.get('numeroTarjeta')?.invalid && this.form.get('numeroTarjeta')?.touched"></i>
                             </span>
-                            <input type="text" class="form-control" placeholder="Número de Tarjeta">
+                            <input formControlName="numeroTarjeta" maxlength="16" type="text" class="form-control" placeholder="Número de Tarjeta">
                         </div>
                         <div class="row">
                             <div class="col-lg-7">
                                 <div class="input-group input-group.lg mb-3">
                                     <span class="input-group-text">
-                                        <i class="fas fa-calendar-alt"></i>
+                                        <i class="fas fa-calendar-alt"
+                                        [class.green-icon]="this.form.get('fechaExpiracion')?.valid"
+                                        [class.red-icon]="this.form.get('fechaExpiracion')?.invalid && this.form.get('fechaExpiracion')?.touched"></i>
                                     </span>
-                                    <input type="text" class="form-control" placeholder="MM/YY">
+                                    <input formControlName="fechaExpiracion" maxlength="5" type="text" class="form-control" placeholder="MM/YY">
                                 </div>
                             </div>
                             <div class="col-lg-5">
                                 <div class="input-group input-group.lg mb-3">
                                     <span class="input-group-text">
-                                        <i class="fas fa-key"></i>
+                                        <i class="fas fa-key"
+                                        [class.green-icon]="this.form.get('cvv')?.valid"
+                                        [class.red-icon]="this.form.get('cvv')?.invalid && this.form.get('cvv')?.touched"></i>
                                     </span>
-                                    <input type="password" class="form-control" placeholder="CVV">
+                                    <input formControlName="cvv" type="password" maxlength="3" class="form-control" placeholder="CVV">
                                 </div>
                             </div>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-success btn-lg"><li class="fas fa-database"></li>&nbsp;Aceptar</button>
+                            <button [disabled]="this.form.invalid" type="submit" class="btn btn-success btn-lg">
+                                <li class="fas fa-database"></li>&nbsp;Aceptar
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -57,7 +67,7 @@
                 <div class="card-body">     
                     <h5 class="titulo">LISTADO DE TARJETAS</h5>
                     <table class="table">
-                        <tbody> 
+                        <tbody>   
                             <tr>
                                 <td><b>Nombre</b></td>
                                 <td><b>No. Tarjeta</b></td>
@@ -65,7 +75,7 @@
                                 <td></td>
                                 <td></td>
                             </tr>
-                            <tr *ngFor="let tarjeta of listTarjetas">
+                            <tr *ngFor="let tarjeta of listTarjetas; let i = index">
                                 <td>{{ tarjeta.titulo }}</td>
                                 <td>{{ tarjeta.numeroTarjeta }}</td>
                                 <td>{{ tarjeta.fechaExpiracion}} </td>
@@ -73,7 +83,7 @@
                                     <i class="far fa-edit text-info"></i>
                                 </td>
                                 <td>
-                                    <i class="far fa-trash-alt text-danger"></i>
+                                    <i (click)="EliminarTarjeta(i)" class="far fa-trash-alt text-danger"></i>
                                 </td>
                             </tr>
                         </tbody>
