--- a/src/app/components/tarjeta-credito/tarjeta-credito.component.html
+++ b/src/app/components/tarjeta-credito/tarjeta-credito.component.html
@@ -76,7 +76,7 @@
                                 <td></td>
                             </tr>
                             <tr *ngFor="let tarjeta of listTarjetas; let i = index">
-                                <td>{{ tarjeta.titulo }}</td>
+                                <td>{{ tarjeta.titular }}</td>
                                 <td>{{ tarjeta.numeroTarjeta }}</td>
                                 <td>{{ tarjeta.fechaExpiracion}} </td>
                                 <td>
